Loads showdown when it is not imported before.

--- a/inapp_survey/static/markdown-delight-editor/markdown-delight-editor-extended.html
+++ b/inapp_survey/static/markdown-delight-editor/markdown-delight-editor-extended.html
@@ -40,7 +40,7 @@
         padding: 0 0 0 40px;
     }
     </style>
-    <markdown-delight-editor extension="extended">
+    <markdown-delight-editor extension="inapp-survey-extended">
         <ul>
             <li><a class="fa fa-file-image-o" on-tap="handleImage" title="Image with custom width and height"></a></li>
             <li><a class="fa fa-youtube-play" on-tap="handleYoutube" title="Embed YouTube Video"></a></li>
